
	* 25-lfs.rules: Move to 51-lfs.rules.
	* 27-firmware.rules: Move to 81-firmware.rules.
	* 81-cdrom.rules: Move to 61-cdrom.rules.

	* doc/25-lfs.txt: Rename to 51-lfs.txt.
	* doc/26-modprobe.txt: Rename to 80-drivers.txt, and modify to reflect
	  the upstream rules.
	* doc/27-firmware.txt: Rename to 81-firmware.txt.
	* doc/81-cdrom.txt: Rename to 61-cdrom.txt.

2007-07-31	Dan Nicholson <dnicholson@linuxfromscratch.org>
	* 25-lfs.rules: Changed the usb_device rule tto create /dev/bus/usb
	  nodes if the usb_device in 2.6.22+ kernels. The rule was also changed
	  to only trigger on "add" events. This change is not backwards
	  compatible with older kernels.

2007-06-12	Dan Nicholson <dnicholson@linuxfromscratch.org>
	* 25-lfs.rules: Fix the CPUID nodes from cpu/%n/cpu to cpu/%n/cpuid,
	  which is what's expected in userspace apps such as x86info.

2007-06-08	Bryan Kadzban	<bryan@linuxfromscratch.org>
	* 25-lfs.rules: Add rules for DVB devices (create nodes in /dev/dvb/)
	  and floppies (create extra nodes based on CMOS type), copied from
	  the SuSE rules file.  Thanks to Alexander Patrakov for the bugreport.

2007-03-04	Matthew Burgess	<matthew@linuxfromscratch.org>
	* Makefile: Use `udevd --version' to work out what version of Udev is
	  installed (requires Udev >= 106)

2007-01-02	Bryan Kadzban	<bryan@linuxfromscratch.org>
	* 25-lfs.rules: Change CPU devices (cpu, msr, microcode) to be in
	  /dev/cpu/ and /dev/cpu/N/, to match Documentation/devices.txt.

2006-10-21	Bryan Kadzban	<bryan@linuxfromscratch.org>
	* Makefile: Add a missing backslash in install-extra-doc.

	* 05-udev-early.rules, 60-persistent-input.rules,
	  60-persistent-storage.rules, 95-udev-late.rules: Remove.  The book
	  will install these files from udev's etc/udev/rules.d directory
	  instead.
	* Makefile: Don't install these rules files after all.  Also, only
	  install corresponding docs if requested.

2006-10-20	Bryan Kadzban	<bryan@linuxfromscratch.org>